<?xml version="1.0"?>
<package>
  <name>keyboard_motion_controller</name>
  <version>0.0.0</version>
  <description>The keyboard_motion_controller package</description>

  <maintainer email="aditya.sreekumar@gmail.com">Aditya Sreekumar</maintainer>

  <license>MIT</license>

  <!-- <url type="website">http://wiki.ros.org/keyboard_motion_controller</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
